network_policies/darkarts-magic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: darkarts-magic
  namespace: darkarts
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          i-am: dumbledore
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
