network_policies/darkarts-no-access.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: darkarts-no-access
  namespace: darkarts
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
