network_policies/potions-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: potions-rules
  namespace: potions
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
         class: potions
  egress:
  - to:
    - podSelector:
        matchLabels:
         class: potions
